--- a/mogenius/src/pages/nestjsplain.html
+++ b/mogenius/src/pages/nestjsplain.html
@@ -1,4 +1,9 @@
-﻿<h1 id="nest-js">Nest JS</h1>
+﻿<head>
+    <link rel="stylesheet" href="/src/css/krankimain.css" media="print" onload="this.media='all'">
+</head>
+
+
+<h1 id="nest-js">Nest JS</h1>
 <p><img src="https://api.mogenius.com/file/id/6001fd0a-c626-4e64-9c19-e167b86b3a30" alt="enter image description here"></p>
 <p>Website <strong><a href="https://nestjs.com">https://nestjs.com</a></strong></p>
 <p>Documentation <strong><a href="https://docs.nestjs.com">https://docs.nestjs.com</a></strong></p>
